[package]
name = "plic"
description = "Provide structs and methods to operate riscv plic device."
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/YdrMaster/plic.git"
documentation = "https://docs.rs/plic"
license = "MulanPSL-2.0 OR MIT"
readme = "README.md"
keywords = ["riscv"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
# 可以将某些基本的整数类型直接作为中断源和上下文号参数使用
primitive-id = []
