[package]
name = "plic"
description = "Provide structs and methods to operate riscv plic device."
version = "0.0.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>", "Luo Jia <me@luojia.cc>"]
repository = "https://github.com/YdrMaster/plic.git"
documentation = "https://docs.rs/plic"
license = "MulanPSL-2.0 OR MIT"
readme = "README.md"
keywords = ["riscv"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
default = []
# Implement plic traits for integer types
#
# By using this feature, parameter types of plic functions fall back to integers,
# static type checks are disabled so this library won't detect parameters in incorrect orders.
# Although some people may find it userul in prototyping plic implementations,
# users of this crate are strongly encouraged not to enable this feature in production.
primitive-id = []
